k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray-agent
  namespace: xray-agent
  labels:
    app.kubernetes.io/name: xray-agent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: xray-agent
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
